<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/key_scanning__menu_compare"
          android:id="@+id/menu_barcode"
          android:icon="@drawable/ic_menu_barcode"
          app:showAsAction="ifRoom">

        <menu>
            <item android:title="@string/key_scanning__menu_scan_contacts_qr_code"
                  android:id="@+id/menu_scan"/>

            <item android:title="@string/key_scanning__menu_display_your_qr_code"
                  android:id="@+id/menu_get_scanned"/>

            <item android:title="@string/share_identity_fingerprint"
                  android:id="@+id/menu_share_fingerprint"/>

        </menu>

    </item>
</menu>