<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.smssecure.smssecure.preferences.widgets.SilenceListPreference
                    android:key="pref_enter_key_type"
                    android:defaultValue="enter"
                    android:title="@string/preferences__keyboard_settings"
                    android:entries="@array/pref_enter_key_entries"
                    android:entryValues="@array/pref_enter_key_values"/>

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_system_emoji"
        android:title="@string/preferences_advanced__use_system_emoji"
        android:summary="@string/preferences_advanced__disable_silences_built_in_emoji_support" />

    <Preference android:key="pref_submit_debug_logs"
                android:title="@string/preferences__submit_debug_log"/>
</PreferenceScreen>
